--- a/pom.xml
+++ b/pom.xml
@@ -53,20 +53,25 @@
             <version>[4, )</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
-
         <dependency>
             <groupId>com.zenjava</groupId>
             <artifactId>javafx-maven-plugin</artifactId>
-            <version>8.8.3</version>
+            <version>8.8.2</version>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout-javafx</artifactId>
+            <version>4.2</version>
+        </dependency>
     </dependencies>
     <!--build>
         <finalName>AudioServerSim</finalName>
@@ -140,41 +145,12 @@
 
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>8.6.0</version>
+                <version>8.8.3</version>
                 <configuration>
-                    <mainClass>ch.sbb.audioserversim.AudioServerSim</mainClass>
-                    <vendor>SBB CFF FFS</vendor>
-                    <identifier></identifier>
+                    <mainClass>ch.sbb.ui.AudioServerSimApp</mainClass>
                 </configuration>
-                <executions>
-                    <execution>
-                        <!-- required before build-native -->
-                        <id>create-jfxjar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>build-jar</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>create-native</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>build-native</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
