--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,13 @@
             <version>3.8.2</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>apache-log4j-extras</artifactId>
+                <version>1.2.17</version>
+            </dependency>
+
+        </dependencies>
     <build>
         <resources>
             <resource>
